Table devices {
  created_at timestamptz [not null, default: `now()`]
  id text [not null]
  model text [not null]
  name text [not null]
  fcm_token text

  indexes {
    id [pk]
    fcm_token [unique]
  }
}

Table user_devices {
  user_id uuid [not null]
  last_login timestamptz [not null, default: `now()`]
  device_id text [not null]

  indexes {
    (user_id, device_id) [pk]
  }
}
Ref: user_devices.user_id > users.id [delete: cascade]
Ref: user_devices.device_id > devices.id [delete: cascade]

Table device_users {
  user_id uuid [not null]
  device_id text [not null]

  indexes {
    device_id [pk]
  }
}

Table notification_types {
  id citext [not null]
  name text [not null]
  description text [not null]

  indexes {
    id [pk]
  }
}

Table user_subscriptions {
  user_id uuid [not null]
  subscribed_at timestamptz [not null, default: `now()`]
  type citext [not null]

  indexes {
    (user_id, type) [pk]
    type
  }
}
Ref: user_subscriptions.user_id > users.id [delete: cascade]
Ref: user_subscriptions.type > notification_types.id [delete: restrict]

Table notifications {
  id uuid [not null, default: `gen_random_uuid()`]
  sent_at timestamptz [not null, default: `now()`]
  type citext [not null]
  topic citext [not null]
  title text [not null]
  body text
  click_url text

  indexes {
    id [pk]
    sent_at
    type
  }
}
Ref: notifications.type > notification_types.id [delete: restrict]

